[gd_scene load_steps=5 format=3 uid="uid://dgfvvqlk76uhu"]

[ext_resource type="Script" uid="uid://dewxj4prpkdn7" path="res://scenes/menu_browse_cards.gd" id="1_t8833"]
[ext_resource type="Theme" uid="uid://cts0fwcuwbvl0" path="res://theme_default.tres" id="2_dsaet"]

[sub_resource type="LabelSettings" id="LabelSettings_spg3m"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_txys0"]
font_size = 32

[node name="MenuBrowseCards" type="Node2D"]
script = ExtResource("1_t8833")

[node name="Panel" type="Panel" parent="."]
offset_left = -600.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = 150.0
theme = ExtResource("2_dsaet")

[node name="ScrollCards" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 1175.0
offset_bottom = 275.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBox" type="HBoxContainer" parent="Panel/ScrollCards"]
custom_minimum_size = Vector2(1150, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="NoCards" type="Label" parent="Panel/ScrollCards/HBox"]
visible = false
custom_minimum_size = Vector2(1150, 0)
layout_mode = 2
text = "There are no cards to show"
label_settings = SubResource("LabelSettings_spg3m")
horizontal_alignment = 1

[node name="HeaderPanel" type="Panel" parent="."]
offset_left = -600.0
offset_top = -236.0
offset_right = 600.0
offset_bottom = -156.0
theme = ExtResource("2_dsaet")

[node name="Label" type="Label" parent="HeaderPanel"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 80.0
text = "Viewing Cards"
label_settings = SubResource("LabelSettings_txys0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UseFilter" type="CheckBox" parent="."]
offset_left = -586.0
offset_top = -144.0
offset_right = -354.0
offset_bottom = -113.0
theme = ExtResource("2_dsaet")
button_pressed = true
text = "Show valid targets only"

[node name="CloseButton" type="Button" parent="."]
offset_left = 489.0
offset_top = -138.0
offset_right = 589.0
offset_bottom = -98.0
theme = ExtResource("2_dsaet")
text = "Close"

[connection signal="toggled" from="UseFilter" to="." method="_on_use_filter_toggled"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
